deploy/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: farmrecorder
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgis/postgis:18-3.6
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-db
          mountPath: /var/lib/postgresql
      volumes:
      - name: postgres-db
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: farmrecorder
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
